--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "author": "ayana@fullstackacademy.com",
   "license": "MIT",
   "dependencies": {
     "bluebird": "^3.2.1",
     "body-parser": "^1.14.2",
+    "bootstrap": "^3.3.6",
     "express": "^4.13.4",
+    "jQuery": "^1.7.4",
     "mongoose": "4.1.2",
     "morgan": "^1.6.1",
     "swig": "^1.4.2"
